Updating to latest FlutterFlow output.

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,8 @@
   
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" href="fav_tablio.png" sizes="any"/>
+  
 
   <!-- Open Graph & SEO tags -->
   <meta property="og:title" content="tablio" />
