--- a/web/index.html
+++ b/web/index.html
@@ -26,19 +26,19 @@
   
 
   <!-- Favicon -->
-  <link rel="icon" href="fav_tablio.png" sizes="any"/>
+  <link rel="icon" href="fav_mono_tablio_green.png" sizes="any"/>
   
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="tablio" />
+  <meta property="og:title" content="Transforme suas mesas em oportunidades." />
   <meta property="og:description" content="Built with FlutterFlow." />
   <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="tablio" />
+  <meta name="twitter:title" content="Transforme suas mesas em oportunidades." />
   <meta name="twitter:description" content="Built with FlutterFlow." />
   <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> tablio </title>
+  <title> Transforme suas mesas em oportunidades. </title>
   <meta name="description" content="Built with FlutterFlow." />
     
 
