--- a/web/index.html
+++ b/web/index.html
@@ -32,10 +32,10 @@
   <!-- Open Graph & SEO tags -->
   <meta property="og:title" content="Transforme suas mesas em oportunidades." />
   <meta property="og:description" content="Built with FlutterFlow." />
-  <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
+  <meta property="og:image" content="/assets/assets/images/mono_tablio_green.png" /> 
   <meta name="twitter:title" content="Transforme suas mesas em oportunidades." />
   <meta name="twitter:description" content="Built with FlutterFlow." />
-  <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
+  <meta name="twitter:image" content="/assets/assets/images/mono_tablio_green.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <title> Transforme suas mesas em oportunidades. </title>
